# ALMSystem-PublicDemo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
ai_layer/: __init__.py  agent.py  config.py
ai_layer/agents/: __init__.py  base_agent.py  bpa_specialist.py  config_advisor.py  ifrs17_specialist.py  modelling_agent.py  reviewer.py  run_analyst.py  solvency2_specialist.py
ai_layer/knowledge_base/: __init__.py  architecture_loader.py  code_loader.py  decisions_loader.py  model_docs.md  schema_export.py
ai_layer/tools/: __init__.py  get_run_config.py  get_run_results.py  submit_run.py
api/: dependencies.py  main.py
api/routers/: ai.py  batches.py  config.py  data.py  results.py  runs.py  workers.py
api/schemas/: ai_schema.py  batch_schema.py  config_schema.py  data_schema.py  result_schema.py  run_schema.py  worker_schema.py
data/loaders/: __init__.py  asset_data_loader.py  base_loader.py  bpa_data_loader.py  liability_data_loader.py
data/mortality/: CMI_2023_F.csv  CMI_2023_M.csv  README.md  S3PFA.csv  S3PMA.csv
data/reference/: pra_fundamental_spread.csv
data/tools/: basis_compare_core.py  basis_compare_server.py  bpa_mp_compressor.py  generate_esg_scenarios.py
data/validators/: __init__.py  asset_validator.py  bpa_validator.py  liability_validator.py
document/: ALM_Architecture.md  DECISIONS.md
engine/core/: fund.py  (+2 more)
storage/: batch_repository.py  db.py  ifrs17_state_repository.py  result_repository.py  run_repository.py
worker/: job_queue.py  main.py  progress.py  tasks.py
(+237 files in other folders)
